fixed asset load order for work content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script-->
     <!--script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
 
-    <title>Hey! Strategist, Creativity, Data Informed Decisions...</title>
+    <title>Hey! Zac Rolland, Creative Strategist! </title>
     <link rel="icon" type="image/ico" href="assets/favicon.ico" />
 
     <!--CSS-->
