resize content windows

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           <div class="work-image"><img id="work-image" src=""></div>
 
-          <p id="close">close</p>
+          <p id="close-work">close</p>
 
         </div>
         <!--End of Work Container-->
@@ -142,7 +142,7 @@
               <div id="contact"><p>zrolland[at]hyperisland.se</p></div>
             </div>
           </div>
-
+          <p id="close-me">close</p>
         </div>
 
 
