added responsive close botton

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <div class="work-container">
 
           <div id="work-header">
+            <p id="close-work-top">close</p>
+
             <div class="logo"><img id="work-logo" src=""></div>
 
             <div id="work-legend">
@@ -128,7 +130,7 @@
 
           <div class="work-image"><img id="work-image" src=""></div>
 
-          <p id="close-work">close</p>
+          <p id="close-work-bottom">close</p>
 
         </div>
         <!--End of Work Container-->
