--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!--React-->
-    <script src="js/build/react.js"></script>
-    <script src="js/build/JSXTransformer.js"></script>
+   <!--  // <script src="js/build/react.js"></script>
+    // <script src="js/build/JSXTransformer.js"></script> -->
 
   </head>
 
