--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="first">I love connecting all the dots</h1>
         <h1 class="second">Especially the big ones</h1>
       </div> -->
-      <p class="name">Zac Rolland</p>
+      <p class="tag">Connecting The Dots</p>
       <div href="#" class="buttons start-stop">pause</div>
     </header>
     <div class="container">
@@ -139,9 +139,14 @@
         <div class="me-container">
 
           <div class="me-content">
-            <div class="me-content-title"><h1>Coming Soon!</h1>
+              <div class="avatar"><img src="assets/me3.jpg"></div>
+              <div class="name"><h1>Zac Rolland</h1></div>
+              <div class="me-content-title"><p>Data-Informed Creative Strategist</p>
               <br>
-              <div id="contact"><p>zrolland[at]hyperisland.se</p></div>
+              <div id="contact">
+                <p>e: zrolland[at]hyperisland.se</p>
+                <p>t: +46739543454</p>
+              </div>
             </div>
 
             <p id="close-me">close</p>
