--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
                 <p>e: zrolland[at]hyperisland.se</p>
                 <p>t: +46739543454</p>
               </div>
+              <br>
+              <div id="warning">
+                <p>*work in progress</p>
+              </div>
             </div>
-
             <p id="close-me">close</p>
 
         </div>
