--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
-              <div class="me-content-title"><p>Data-Informed Creative Strategist</p>
+              <div class="me-content-title"><p>Creative Strategist / Data-informed</p>
               <br>
               <div id="contact">
                 <p>e: zrolland[at]hyperisland.se</p>
