--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!--Google Analytics (normal)-->
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       <script>
+      //   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      //   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      //   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-48229510-1','auto');
-        ga('send', 'pageview');
-      </script>
+      //   ga('create', 'UA-48229510-1','auto');
+      //   ga('send', 'pageview');
+      // </script>
 
   </head>
 
@@ -58,29 +58,29 @@
         <div class="dot-element-work-title">
           <h1 class="title">Work</h1>
         </div>
-        <div class="dot-element-work-row-one">
-          <h1 class="hover-state" id="lego">LEGO</h1>
+        <div class="dot-element-work-row-one" id="lego-bg">
+          <h1 class="hover-state-work" id="lego">LEGO</h1>
         </div>
-        <div class="dot-element-work-row-one">
-          <h1 class="hover-state" id="coke">Coca-Cola</h1>
+        <div class="dot-element-work-row-one" id="coke-bg">
+          <h1 class="hover-state-work" id="coke">Coca-Cola</h1>
         </div>
-        <div class="dot-element-work-row-two">
-          <h1 class="hover-state" id="halebop">Halebop</h1>
+        <div class="dot-element-work-row-two" id="halebop-bg">
+          <h1 class="hover-state-work" id="halebop">Halebop</h1>
         </div>
-        <div class="dot-element-work-row-two">
-          <h1 class="hover-state" id="barpass">Barpass</h1>
+        <div class="dot-element-work-row-two" id="barpass-bg">
+          <h1 class="hover-state-work" id="barpass">Barpass</h1>
         </div>
-        <div class="dot-element-work-row-two">
-          <h1 class="hover-state" id="breathr">Breathr</h1>
+        <div class="dot-element-work-row-two" id="breathr-bg">
+          <h1 class="hover-state-work" id="breathr">Breathr</h1>
         </div>
-        <div class="dot-element-work-row-three">
-          <h1 class="hover-state" id="screw-sweden">Screw Sweden</h1>
+        <div class="dot-element-work-row-three" id="screw-sweden-bg">
+          <h1 class="hover-state-work" id="screw-sweden">Screw Sweden</h1>
         </div>
-        <div class="dot-element-work-row-three">
-          <h1 class="hover-state" id="jobbook">Jobbook</h1>
+        <div class="dot-element-work-row-three" id="jobbook-bg">
+          <h1 class="hover-state-work" id="jobbook">Jobbook</h1>
         </div>
-        <div class="dot-element-work-row-three">
-          <h1 class="hover-state" id="sos-barnbyar">SOS Barnybar</h1>
+        <div class="dot-element-work-row-three" id="sos-barnbyar-bg">
+          <h1 class="hover-state-work" id="sos-barnbyar">SOS Barnybar</h1>
         </div>
       </section>
 
