fixed me design

--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
-              <div class="me-content-title"><p>Creative Strategist / Data-informed</p>
-              <br>
+              <div class="me-content-title"><p>Creative Strategist<br>Data-informed Decisions<br>Client & Code</p>
+              </div>
               <div id="contact">
-                <p>e: zrolland[at]hyperisland.se</p>
+                <p>e: zac.rolland[at]hyperisland.se</p>
                 <p>t: +46739543454</p>
               </div>
-              <br>
               <div id="warning">
                 <p>*work in progress</p>
               </div>
