--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
-              <div class="me-content-title"><p>Creative Strategist<br>Data-informed Decisions<br>Client & Code</p>
+              <div class="me-content-title"><p>Creative Strategist<br>Data-informed Decisions<br>Clients & Code</p>
               </div>
               <div id="contact">
                 <p>e: zac.rolland[at]hyperisland.se</p>
