added social icons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
 
+    <script src="js/build/modernizr.custom.99103.js"></script>
+
     <!--TypeKit Fonts-->
-    <!--script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script-->
-    <!--script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
+    <script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
     <title>Hey! Zac Rolland, Creative Strategist! </title>
     <link rel="icon" type="image/ico" href="assets/favicon.ico" />
@@ -154,6 +156,11 @@
               <div id="contact">
                 <p>e: zac.rolland[at]hyperisland.se</p>
                 <p>t: +46739543454</p>
+              </div>
+              <div class="social">
+                <a href="http://se.linkedin.com/pub/zac-rolland/38/95a/ab3/"><img src="assets/logos/linkedin.png"></a>
+                <a href="skype:zacrolz?call"><img src="assets/logos/skype.png"></a>
+                <a href="https://twitter.com/zacrolz"><img src="assets/logos/twitter.png"></a>
               </div>
               <div id="warning">
                 <p>*work in progress</p>
