--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
 
-    <script src="js/build/modernizr.custom.99103.js"></script>
+<!--     // <script src="js/build/modernizr.custom.99103.js"></script> -->
 
     <!--TypeKit Fonts-->
     <script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script>
