--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <!--Me Container-->
         <div class="me-container">
-
+          <p id="close-me">close</p>
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
@@ -158,15 +158,16 @@
                 <p>t: +46739543454</p>
               </div>
               <div class="social">
-                <a href="http://se.linkedin.com/pub/zac-rolland/38/95a/ab3/"><img src="assets/logos/linkedin.png"></a>
+                <a href="https://github.com/rolz" target="_blank"><img src="assets/logos/github.png"></a>
+                <a href="http://se.linkedin.com/pub/zac-rolland/38/95a/ab3/" target="_blank"><img src="assets/logos/linkedin.png"></a>
                 <a href="skype:zacrolz?call"><img src="assets/logos/skype.png"></a>
-                <a href="https://twitter.com/zacrolz"><img src="assets/logos/twitter.png"></a>
+                <a href="https://twitter.com/zacrolz" target="_blank"><img src="assets/logos/twitter.png"></a>
               </div>
               <div id="warning">
                 <p>*work in progress</p>
               </div>
             </div>
-            <p id="close-me">close</p>
+            <!-- <p id="close-me">close</p> -->
 
         </div>
 
