fixed tracking link

--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
       <script src="js/mouse-events.js"></script>
 
       <!--App JS-->
-      <script type="text/jsx" src="js/tracking.js"></script>
       <script src="js/me.js"></script>
       <script src="js/work.js"></script>
+
+      <!--Custom Tracking-->
+      <script src="js/tracking.js"></script>
 
       <!--Animations-->
       <script>
