data-virtual-view link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
 
       <section id="me-canvas">
-        <div class="dot-element-me big" data-virtual-view="/virtual/me">
+        <div class="dot-element-me big">
           <h1 class="title" id="me" data-virtual-view="/virtual/me">Me</h1>
         </div>
         <!-- <div class="dot-element-me small">
