added digital strategist

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    <title>Hey! Zac Rolland, Creative Strategist! </title>
+    <title>Hey! I'm Zac / Digital Strategist! </title>
     <link rel="icon" type="image/ico" href="assets/favicon.ico" />
 
     <!--CSS-->
@@ -151,7 +151,8 @@
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
-              <div class="me-content-title"><p>Creative Strategist<br>Data-informed Decisions<br>Clients & Code</p>
+              <div class="me-content-title"><p>Digital Strategist<br>Data-informed Decisions<br>
+              Growth, Clients, Code</p>
               </div>
               <div id="contact">
                 <p>e: zac.rolland[at]hyperisland.se</p>
