added digital strategist

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
               <div class="me-content-title"><p>Digital Strategist<br>Data-informed Decisions<br>
-              Growth, Clients, Code</p>
+              Growth, Clients & Code</p>
               </div>
               <div id="contact">
                 <p>e: zac.rolland[at]hyperisland.se</p>
