updated personal info

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
           <div class="me-content">
               <div class="avatar"><img src="assets/me3.jpg"></div>
               <div class="name"><h1>Zac Rolland</h1></div>
-              <div class="me-content-title"><p>Digital Strategist<br>Data-informed Decisions<br>
+              <div class="me-content-title"><p>Creative Developer<br>Data-informed Decisions<br>
               Growth, Clients & Code</p>
               </div>
               <div id="contact">
                 <p>e: zac.rolland[at]hyperisland.se</p>
-                <p>t: +46739543454</p>
+                <p>t: (1)(415)-867-1401</p>
               </div>
               <div class="social">
                 <a href="https://github.com/rolz" target="_blank"><img src="assets/logos/github.png" data-virtual-view="/virtual/github"></a>
