updated site title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="//use.typekit.net/spi6vmg.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    <title>Hey! I'm Zac / Digital Strategist! </title>
+    <title>Hey! I'm Zac Rolland / Creative Developer! </title>
     <link rel="icon" type="image/ico" href="assets/favicon.ico" />
 
     <!--CSS-->
